--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,17 @@ body {
     font-family: 'Overpass';
 }
 
+@keyframes aparecer {
+    from {
+        opacity: 0;
+        margin-top: 2rem;
+    }
+    to {
+        opacity: 1;
+        margin-top: 0;
+    }
+}
+
 main {
     display: flex;
     flex-direction: column;
@@ -25,6 +36,7 @@ main {
     height: 350px;
     color: #fff;
     border-radius: 1rem;
+    animation: aparecer .5s;
 }
 
 header {
@@ -108,6 +120,7 @@ header img {
     color: #fff;
     border-radius: 1rem;
     text-align: center;
+    animation: aparecer .5s;
 }
 
 #thank-you img {
@@ -138,6 +151,7 @@ footer {
     bottom: 0;
     color: #fff;
     padding: 10px;
+    text-align: center;
 }
 
 footer a {
